bug fiexes and updated content

--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -107,7 +107,7 @@
                 active: pageId == '#'
                 },
                 {
-                text: 'Take over representation',
+                text: 'Represent a case',
                 href: getUrl('/startnoc'),
                 active: pageId == '#'
                 }
