--- a/app/views/noticeofchange/solicitor/confirmationofstopping.html
+++ b/app/views/noticeofchange/solicitor/confirmationofstopping.html
@@ -15,21 +15,22 @@ Case details
 
                     <!-- Automatic approval -->
                     <h1 class="govuk-panel__title">
-                        You've stopped representing this case<br><br>
+                        Notice of change successful<br><br>
+                        <div class="govuk-panel__body">
+                            You’ve stopped representing case <br>3689-2642-5857-7069
+                        </div>
                     </h1>
 
                 </div>
 
 
                     <!-- Automatic approval -->
-                    <p class="govuk-body govuk-!-margin-top-6">We have sent you a confirmation email.</p>
-                    <p class="govuk-body">We'll also send a letter to the party confirming you no longer represent them.</p>
 
-                    <h2 class="govuk-heading-m ">What happens next</h2>
 
-                    <p class="govuk-body">
-                        This case will no longer appear in your case list.
-                    </p>
+                    <h2 class="govuk-heading-m  govuk-!-margin-top-6">What happens next</h2>
+                    <p class="govuk-body">We’ve sent you a confirmation email.</p>
+                    <p class="govuk-body">We’ll also send a letter to your former client confirming you are no longer their legal representative. </p>
+                    <p class="govuk-body">This case will no longer appear in your case list.</p>
                     <p class="govuk-body">
                         <a href="caselist">View case list</a>
                     </p>
