--- a/app/views/noticeofchange/solicitor/securityquestiondivorce.html
+++ b/app/views/noticeofchange/solicitor/securityquestiondivorce.html
@@ -20,7 +20,7 @@ Case details
                         <div class="govuk-error-summary__body">
                             <ul class="govuk-list govuk-error-summary__list">
                                 <li>
-                                    <a href="#dateerror">You must enter a valid date</a>
+                                    <a href="#dateerror">You must enter a date</a>
                                 </li>
                             </ul>
                         </div>
@@ -30,7 +30,7 @@ Case details
 
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">Enter date case was submitted</h1>
+                           <h1 class="govuk-heading-l">When was the case submitted?</h1>
                       </div>
                 </div>
 
@@ -50,7 +50,7 @@ Case details
 
                             {% if data.errorsecuritydivorce == 'true'  %}
                                 <span id="national-insurance-number-error" class="govuk-error-message">
-                                    <span class="govuk-visually-hidden">Error:</span> Enter a valid date
+                                    <span class="govuk-visually-hidden">Error:</span> Enter a date
                                 </span>
 
                                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
