--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -15,7 +15,7 @@ Case details
             <div class="govuk-error-summary__body">
                 <ul class="govuk-list govuk-error-summary__list">
                     <li>
-                        <a href="#govuk-radios">You must select a role</a>
+                        <a href="#govuk-radios">You must select how you will be representing the case</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +38,7 @@ Case details
         {% if data.errorrole == 'true' %}
             <div class="govuk-form-group govuk-!-margin-bottom-7 govuk-form-group--error">
                 <span id="national-insurance-number-error" class="govuk-error-message">
-                    <span class="govuk-visually-hidden">Error:</span> Select a role
+                    <span class="govuk-visually-hidden">Error:</span> Select how you will be representing the case
                 </span>
         {% else %}
             <div class="govuk-form-group govuk-!-margin-bottom-7">
