--- a/app/views/noticeofchange/solicitor/casedetailsdivorce.html
+++ b/app/views/noticeofchange/solicitor/casedetailsdivorce.html
@@ -30,7 +30,7 @@ Case details
                         <option value="published" >Link respondent</option>
                         <option value="published" >Add Note</option>
                         <option value="published" >Upload document</option>
-                        <option value="updated" >Stop representation</option>
+                        <option value="updated" >Stop representing a case</option>
                     </select>
 
                     <form
