--- a/app/views/noticeofchange/solicitor/casedetailsprobate.html
+++ b/app/views/noticeofchange/solicitor/casedetailsprobate.html
@@ -27,7 +27,7 @@ Case details
 
                     <select class="govuk-select" id="sort" name="sort">
                         <option value="published" selected>Deceased details</option>
-                        <option value="updated" >Stop representation</option>
+                        <option value="updated" >Stop representing a case</option>
                     </select>
 
                     <form
