--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -25,7 +25,7 @@ Case details
                             {% else %}
                                 Notice of change successful<br><br>
                                 <div class="govuk-panel__body">
-                                    You’re now the representative of case {{data.casenumber}}
+                                    You’re now the representative of case <br>{{data.casenumber}}
                                 </div>
                             {% endif %}
                         </h1>
@@ -57,13 +57,15 @@ Case details
                         <p class="govuk-body">
                             This case will now appear in your case list.
                         </p>
-                        <p class="govuk-body"> <a href="#">View this case</a></p>
+
+                        {% if data.divorcecaselist == 'true'%}
+                            <p class="govuk-body"> <a href="casedetailsdivorce">View this case</a></p>
+                        {% else %}
+                            <p class="govuk-body"> <a href="casedetailsprobate">View this case</a></p>
+                        {% endif %}
+
                     {% endif %}
-
-
-
                     <p class="govuk-body"><a href="caselist">View case list</a></p>
-
                 {% endif %}
 
 
