--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -45,21 +45,15 @@ Case details
         {% endif %}
             <div class="govuk-radios" id="govuk-radios">
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Solicitor placeholder 1" >
+                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Petitioner" >
                     <label class="govuk-label govuk-radios__label" for="radio1">
-                        Solicitor placeholder 1
+                        Petitioner
                     </label>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="Solicitor placeholder 2" >
+                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="Respondent" >
                     <label class="govuk-label govuk-radios__label" for="radio2">
-                        Solicitor placeholder 2
-                    </label>
-                </div>
-                <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio3" name="role" type="radio" value="Solicitor placeholder 3" >
-                    <label class="govuk-label govuk-radios__label" for="radio3">
-                        Solicitor placeholder 3
+                        Respondent
                     </label>
                 </div>
             </div>
