new caselists and immigraion case example

--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -86,8 +86,8 @@
   {% endset %}
 
 
-    <div  style="background-color: black;">
-        <div style="width:1220px; display: flex; margin: 0 auto; background-color: black;">
+    <div  style="background-color: #0b0c0c;">
+        <div style="width:1220px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
 
             <div style="width: 406px; ">
 
