--- a/app/views/noticeofchange/solicitor/casedetailsdivorce.html
+++ b/app/views/noticeofchange/solicitor/casedetailsdivorce.html
@@ -26,7 +26,8 @@ Case details
                     <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
 
                     <select class="govuk-select" id="sort" name="sort">
-                        <option value="published" selected>Submit amended application</option>
+                        <option value="published" selected>Select action</option>
+                        <option value="published" >Submit amended application</option>
                         <option value="published" >Link respondent</option>
                         <option value="published" >Add Note</option>
                         <option value="published" >Upload document</option>
