--- a/app/views/noticeofchange/solicitor/casedetailsprobate.html
+++ b/app/views/noticeofchange/solicitor/casedetailsprobate.html
@@ -26,7 +26,8 @@ Case details
                     <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
 
                     <select class="govuk-select" id="sort" name="sort">
-                        <option value="published" selected>Deceased details</option>
+                        <option value="published" selected>Select action</option>
+                        <option value="published" >Deceased details</option>
                         <option value="updated" >Stop representing a case</option>
                     </select>
 
