--- a/app/views/noticeofchange/solicitor/caselist.html
+++ b/app/views/noticeofchange/solicitor/caselist.html
@@ -20,9 +20,8 @@ Case details
 
     <h2 class="govuk-heading-m  govuk-!-margin-top-4">Case list</h2>
 
-        {% if data.divorcecaselist == 'true'%}
+        {% if data.caselist == 'divorce' %}
             <p>Displaying 1 - 3 out of 3 results</p>
-
             <table class="govuk-table ">
                 <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
@@ -81,11 +80,8 @@ Case details
                 </tbody>
             </table>
 
-
-
-        {% else %}
+        {% elseif data.caselist == 'probate' %}
             <p>Displaying 1 - 3 out of 3 results</p>
-
             <table class="govuk-table ">
                 <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
@@ -129,20 +125,109 @@ Case details
 
                 </tbody>
             </table>
+
+        {% elseif data.caselist == 'publiclaw' %}
+            <p>Displaying 1 - 3 out of 3 results</p>
+            <table class="govuk-table ">
+            <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16">Case Reference Number</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16 ">Assigned office</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16 ">BF Date</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16 ">Clerk</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16 ">Hearing Date</th>
+            </tr>
+            </thead>
+
+            <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate">3689-2642-5857-7069</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Cardiff</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate">1593-0136-4696-9976</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16">London East</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate">3827-2010-3565-3933</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16">midlands East</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+            </tr>
+
+
+            </tbody>
+        </table>
+
+        {% elseif data.caselist == 'immigration' %}
+            <p>Displaying 1 - 3 out of 3 results</p>
+            <table class="govuk-table ">
+                <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16">HMCTS reference</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16 ">Appellant name</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16 ">Status</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-16 ">Hearing date</th>
+                </tr>
+                </thead>
+
+                <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsimmigration">DRAFT</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Anne Yang</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Appeal started</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsimmigration">DRAFT</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Ethel Williams</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Appeal started</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsimmigration">3827-2010-3565-3933</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Norman Jones</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Appeal submitted</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                </tr>
+
+
+                </tbody>
+            </table>
+
         {% endif %}
 
 
 <form method="post"  action="#" class="for4" style=" float: left; margin-top: 50px;">
     <select style="height:25px;" onchange="window.location.href='?'+this.value">
 
-        <option value="divorcecaselist=false&"
-                {% if data.divorcecaselist == 'false' %}selected{% endif %}
+        <option value="caselist=divorce&"
+                {% if data.caselist == 'divorce' %}selected{% endif %}
+        >Divorce</option>
+
+        <option value="caselist=probate&"
+                {% if data.caselist == 'probate' %}selected{% endif %}
         >Probate</option>
 
+        <option value="caselist=publiclaw&"
+                {% if data.caselist == 'publiclaw' %}selected{% endif %}
+        >Public Law</option>
 
-        <option value="divorcecaselist=true&"
-                {% if data.divorcecaselist == 'true' %}selected{% endif %}
-        >Divorce</option>
+        <option value="caselist=immigration&"
+                {% if data.caselist == 'immigration' %}selected{% endif %}
+        >Immigration and asylum</option>
+
 
     </select>
 </form>
