--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -70,7 +70,7 @@ Case details
                         </dd>
                     </div>
 
-                    {% if data.divorcecaselist == 'true' %}
+                    {% if data.caselist == 'divorce' %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Date case was submitted
@@ -84,7 +84,7 @@ Case details
                                 </a>
                             </dd>
                         </div>
-                    {% else %}
+                    {% elseif data.caselist == 'probate' %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Last name of party
