--- a/app/views/noticeofchange/solicitor/caselist.html
+++ b/app/views/noticeofchange/solicitor/caselist.html
@@ -141,7 +141,7 @@ Case details
 
             <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate">3689-2642-5857-7069</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailspubliclaw">3689-2642-5857-7069</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Cardiff</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
@@ -149,7 +149,7 @@ Case details
             </tr>
 
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate">1593-0136-4696-9976</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailspubliclaw">1593-0136-4696-9976</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">London East</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
@@ -157,7 +157,7 @@ Case details
             </tr>
 
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate">3827-2010-3565-3933</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailspubliclaw">3827-2010-3565-3933</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">midlands East</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
