All the services added on caselist and case level

--- a/app/views/noticeofchange/solicitor/casedetailsfinancialremedy.html
+++ b/app/views/noticeofchange/solicitor/casedetailsfinancialremedy.html
@@ -14,11 +14,9 @@ Case details
             <div class=""  style="display: flex; justify-content: space-between; ">
 
                 <div style="display: flex; ">
-                    <p class="">3689264258577069: Smith vs Blythe  &nbsp; </p>
+                    <p class="govuk-!-font-weight-bold">3689264258577069: Anne Yang vs Tony Yang  &nbsp; </p>
 
-                    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                        Print
-                    </button>
+
                 </div>
 
 
@@ -60,27 +58,32 @@ Case details
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Petition
+                            Applicant
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            AOS
+                            Divorce Details
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Outcome of Decree Nisi
+                            Nature of Application
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Documents
+                            Case documents
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Marriage Certificate
+                            Gatekeeping and allocation
+                        </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                        <a class="govuk-tabs__tab" href="#past-week">
+                            Scheduling and Listing
                         </a>
                     </li>
                 </ul>
