--- a/app/views/noticeofchange/solicitor/casedetailsprobate.html
+++ b/app/views/noticeofchange/solicitor/casedetailsprobate.html
@@ -77,7 +77,7 @@ Case details
                                 <tr class="govuk-table__row" style="border-left: 4px solid #005ea5; background-color: rgba(0,94,165,0.2); ">
                                     <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Apply for probate</a></td>
                                     <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
-                                    <td class="govuk-table__cell">Hemesh Steadman</td>
+                                    <td class="govuk-table__cell">Alex Smith</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -95,7 +95,7 @@ Case details
                             </div>
                             <div>
                                 <p style="text-decoration: underline;">17 May 2020, 3:49:22 PM</p>
-                                <p>Hemesh Steadman</p>
+                                <p>Alex Smith</p>
                                 <p>Application created</p>
                                 <p>Apply for probate</p>
                                 <p>-</p>
