--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -44,8 +44,7 @@ Case details
 
                 {% if data.autoapproved == 'true' %}
                     <!-- Automatic approval -->
-                    <p class="govuk-body govuk-!-margin-top-6">We have sent you a confirmation email.</p>
-                    <p class="govuk-body">We've also emailed the solicitor who previously represented the case.</p>
+                    <p class="govuk-body govuk-!-margin-top-6">We've  emailed the solicitor who previously represented the case.</p>
 
                     <h2 class="govuk-heading-m ">What happens next</h2>
 
